--- a/recruit-gui/src/app/recruiter-profile/recruiter-profile.component.css
+++ b/recruit-gui/src/app/recruiter-profile/recruiter-profile.component.css
@@ -167,3 +167,41 @@ table tr th{
 	padding:2px;
 }
 
+.modal-title{
+	margin-left:20px;
+}
+
+.modal-body{
+	font-size: large;
+	height:345px;
+	text-align: center;
+}
+
+.modal-header{
+	background:#181414;
+	color:#6A5ACD;
+	font-weight:bold;
+}
+
+.filter-close-box{
+	padding:10px;
+	cursor:pointer;
+	font-size:20px;
+	font-weight: bold;
+	text-align: right;        
+}
+
+.message-send-failure{
+	margin-top:100px;
+	font-weight:bold;
+}
+
+.message-send-success{
+	margin-top:100px;
+	font-weight:bold;
+}
+
+textarea {
+    width:100%;
+    height:200px;
+}
