small ui changes

--- a/recruit-gui/src/app/recruiter-marketplace/recruiter-marketplace.component.html
+++ b/recruit-gui/src/app/recruiter-marketplace/recruiter-marketplace.component.html
@@ -376,7 +376,7 @@
 				</div>
 				<div class="candidate-view-div">
 					<h3>Description</h3>
-					<p>{{activeCandidate.description}}</p>
+					<pre style="white-space:pre-line;font-family: Roboto, 'Helvetica Neue', sans-serif;padding:10px;">{{activeCandidate.description}}</pre>
 				</div>
 				
 				<div class="candidate-view-div">
@@ -670,7 +670,7 @@
 				</div>
 				<div class="candidate-view-div">
 					<h3>Description</h3>
-					<p>{{activeOpenPosition.description}}</p>
+					<pre style="white-space:pre-line;font-family: Roboto, 'Helvetica Neue', sans-serif;padding:10px;">{{activeOpenPosition.description}}</pre>
 				</div>
 				
 				<div class="candidate-view-div">
