--- a/recruit-gui/src/app/recruiter-profile/recruiter-profile.component.html
+++ b/recruit-gui/src/app/recruiter-profile/recruiter-profile.component.html
@@ -60,7 +60,7 @@
 					
 					<h1>{{selectedRecruiterProfile.recruiterFirstName | enumToHumanReadableValue}} {{selectedRecruiterProfile.recruiterSurname | enumToHumanReadableValue}}</h1>
 					<br>
-					<p>{{selectedRecruiterProfile.introduction}}</p>
+					<pre style="white-space:pre-line;font-family: Roboto, 'Helvetica Neue', sans-serif;">{{selectedRecruiterProfile.introduction}}</pre>
 				</div>
 				
 				<div>
