--- a/recruit-gui/src/app/app.component.html
+++ b/recruit-gui/src/app/app.component.html
@@ -8,22 +8,22 @@
       
 		<!-- Pre Authentication -->
 		<li  class="li-arenella-nav-pre-login li-arenella-nav-pre-login-std" *ngIf="!isAuthenticated()">
-           <a  class="dropdown-item" routerLink="/listing">Jobs</a>
+           <a  class="dropdown-item dropdown-item-preauth" routerLink="/listing">Jobs</a>
         </li>
 		<li  class="li-arenella-nav-pre-login li-arenella-nav-pre-login-std" *ngIf="!isAuthenticated()">
-           <a  class="dropdown-item" routerLink="/about">About</a>
+           <a  class="dropdown-item dropdown-item-preauth" routerLink="/about">About</a>
         </li>
 		<li  class="li-arenella-nav-pre-login li-arenella-nav-pre-login-std" *ngIf="!isAuthenticated()">
-           <a  class="dropdown-item" routerLink="/faq">Faq</a>
+           <a  class="dropdown-item dropdown-item-preauth" routerLink="/faq">Faq</a>
         </li>
 		<li  class="li-arenella-nav-pre-login li-arenella-nav-pre-login-std" *ngIf="!isAuthenticated()">
-           <a  class="dropdown-item" routerLink="/suggestions">Login</a>
+           <a  class="dropdown-item dropdown-item-preauth" routerLink="/suggestions">Login</a>
         </li> 
 		<li class="li-arenella-nav-pre-login li-arenella-nav-pre-signup signup-candidate" *ngIf="!isAuthenticated()">
-           	<a class="dropdown-item" routerLink="/create-candidate">Candidate Signup</a>
+           	<a class="dropdown-item dropdown-item-preauth" routerLink="/create-candidate">Candidate Signup</a>
  	    </li>
 		<li class="li-arenella-nav-pre-login li-arenella-nav-pre-signup signup-recruiter" *ngIf="!isAuthenticated()">
-    		<a class="dropdown-item" routerLink="/recruiter-signup">Recruiter Signup</a>
+    		<a class="dropdown-item dropdown-item-preauth" routerLink="/recruiter-signup">Recruiter Signup</a>
         </li>
 
 		<!-- Post Authentication -->
@@ -34,7 +34,8 @@
            <a  class="dropdown-item" routerLink="/suggestions">Suggestions</a>
         </li>
 		<li class="li-arenella-nav" *ngIf="isAuthenticated() && !isRecruiterNoSubscription() && !hasUnpaidSubscription()">
-           <a class="dropdown-item recruiter-account" routerLink="/recruiter-marketplace">Marketplace</a>
+           <a *ngIf="unseenMpPosts > 0" 	class="dropdown-item" routerLink="/recruiter-marketplace"><span class="unseen-posts">{{unseenMpPosts}}</span>Marketplace</a>
+			<a *ngIf="unseenMpPosts <= 0" 	class="dropdown-item" routerLink="/recruiter-marketplace">Marketplace</a>
         </li>
         <li  class="li-arenella-nav" *ngIf="isAuthenticatedAsAdmin()">
            <a  class="dropdown-item" routerLink="/statistics">Statistics</a>
