--- a/recruit-gui/src/app/app.component.html
+++ b/recruit-gui/src/app/app.component.html
@@ -34,7 +34,7 @@
            <a  class="dropdown-item" routerLink="/suggestions">Suggestions</a>
         </li>
 		<li class="li-arenella-nav" *ngIf="isAuthenticated() && !isRecruiterNoSubscription() && !hasUnpaidSubscription()">
-           <a *ngIf="unseenMpPosts > 0" 	class="dropdown-item" routerLink="/recruiter-marketplace"><span class="unseen-posts">{{unseenMpPosts}}</span>Marketplace</a>
+        	<a *ngIf="unseenMpPosts > 0" 	class="dropdown-item" routerLink="/recruiter-marketplace"><span class="unseen-posts">{{unseenMpPosts}}</span>Marketplace</a>
 			<a *ngIf="unseenMpPosts <= 0" 	class="dropdown-item" routerLink="/recruiter-marketplace">Marketplace</a>
         </li>
         <li  class="li-arenella-nav" *ngIf="isAuthenticatedAsAdmin()">
@@ -44,7 +44,8 @@
            <a  class="dropdown-item" routerLink="/new-candidate">New</a>
         </li>
 		<li  class="li-arenella-nav" *ngIf="isAuthenticated()">
-           <a  class="dropdown-item" routerLink="/email">Emails</a>
+        	<a *ngIf="unseenEmails > 0" 	class="dropdown-item" routerLink="/email"><span class="unseen-posts">{{unseenEmails}}</span>Emails</a>
+			<a *ngIf="unseenEmails <= 0"	class="dropdown-item" routerLink="/email">Emails</a>
         </li>
 		<li  class="li-arenella-nav" *ngIf="isAuthenticated()">
            <a  class="dropdown-item" routerLink="/recruiter-profile">Community</a>
