--- a/recruit-gui/src/app/app.component.css
+++ b/recruit-gui/src/app/app.component.css
@@ -82,3 +82,38 @@
 .signup-candidate{
 	background:green;
 }
+
+.modal-body{
+    font-size: large;
+    height:400px;
+    text-align: center;
+}
+
+.modal-title{
+	margin-left:20px;
+}
+
+.modal-header{
+     background:#181414;
+     color:#6A5ACD;
+     font-weight:bold;
+}
+
+.filter-close-box{
+	cursor:pointer;
+}
+
+.modal-feedback{
+	margin-top:50px;
+	height:150px;
+}
+
+.feedbackBox{
+	padding:20px;
+	min-height:200px;
+	font-weight:bold;
+}
+
+.feedbackBox ul{
+	margin-top:20px;
+}
